packages/webassemblyjs/test/fixtures/type-errors/nested-blocks/module.wast
(module
  (func $type-unary-operand-missing-in-block
    (i32.const 0)
    (block
      (block
        (drop)
      )
    )
  )
)
